--- a/style.css
+++ b/style.css
@@ -3,134 +3,163 @@
   padding: 0;
   box-sizing: border-box;
 }
-* body p,
-* h1,
-* h2,
-* h3,
-* h4,
-* h5,
-* h6 {
+
+body,
+h1,
+p {
   margin: 0;
+  padding: 0;
 }
-* body {
-  font-family: "inter", sans-serif;
-  background-color: hsl(233, 47%, 7%);
-  color: #fff;
+
+image {
+  display: block;
+  width: 100%;
+}
+
+body {
+  background-color: hsl(257, 40%, 49%);
+  background-image: url("./images/bg-desktop.svg");
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
+  color: white;
+  font-family: "Open Sans", sans-serif;
 }
 
 .container {
   min-height: 100vh;
-  min-width: 100vw;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-}
-
-.statistics {
-  height: 53vh;
-  width: 70vw;
-  background-color: hsl(244, 38%, 16%);
-  display: flex;
-  flex-direction: row-reverse;
-  border-radius: 0.9rem 0.9rem 0.9rem 0.9rem;
-}
-.statistics__image {
-  min-width: 32vw;
-  background-color: hsl(277, 64%, 61%);
-  border-radius: 0 0.9rem 0.9rem 0;
-}
-.statistics__image .laptop {
-  -o-object-fit: cover;
-     object-fit: cover;
-  width: 100%;
-  mix-blend-mode: multiply;
-  opacity: 0.7;
-  min-height: 100%;
-}
-.statistics__information {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  gap: 7vh;
-  border-radius: 0.9rem 0 0 0.9rem;
-}
-.statistics__information__head h1 {
-  padding: 0 3rem;
-}
-.statistics__information__head .insights {
-  color: hsl(277, 64%, 61%);
-}
-.statistics__information__discovery {
-  margin: 0 0 0 3rem;
-}
-.statistics__information__discovery p {
-  font-family: "inter";
-  color: hsla(0, 0%, 100%, 0.6);
-  font-size: 0.9rem;
-  padding: 0 6rem 0 0;
-}
-.statistics__information__footer {
-  display: flex;
-  flex-direction: row;
-  gap: 3vw;
-  padding: 0 3rem;
-}
-.statistics__information__footer__for__queries {
-  text-transform: uppercase;
-}
-.statistics__information__footer h2 {
-  font-size: 1.1rem;
-}
-.statistics__information__footer p {
-  text-transform: uppercase;
-  font-size: 0.6rem;
-  padding: 0.5rem 0 0 0;
-  color: hsla(0, 0%, 100%, 0.6);
 }
 
-@media screen and (max-width: 998px) {
-  .container {
-    background-color: black;
+.huddle {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+.huddle__main {
+  display: flex;
+  flex-direction: row;
+  height: 70vh;
+  justify-content: center;
+}
+.huddle__main__picture {
+  width: 50vw;
+  height: 100%;
+  background-image: url("./images/illustration-mockups.svg");
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+.huddle__main__info {
+  width: 40vw;
+  height: 70%;
+  display: grid;
+  place-content: center;
+  font-family: "Poppins", sans-serif;
+  gap: 3vh;
+}
+.huddle__main__info .build__community {
+  padding: 0 9rem 0 0;
+  margin: 0 0 0 0.3rem;
+  font-size: 2rem;
+  line-height: 2.7rem;
+}
+.huddle__main__info .register {
+  width: 12vw;
+  height: 7vh;
+  background-color: white;
+  display: grid;
+  place-content: center;
+  border-radius: 5rem;
+  text-decoration: none;
+  color: gray;
+  border: none;
+  font-size: 0.9rem;
+}
+.huddle__main__info .register:hover {
+  background-color: hsl(300, 69%, 71%);
+  color: #fff;
+}
+.huddle__footer {
+  height: 7vh;
+  width: 95%;
+  display: flex;
+  justify-content: flex-end;
+  gap: 2vw;
+}
+.huddle__footer .fa-brands {
+  display: grid;
+  place-content: center;
+  height: 5vh;
+  width: 2.3vw;
+  color: #fff;
+  border: 1px solid white;
+  border-radius: 10rem;
+}
+
+.fa-brands:hover {
+  border: 1px solid hsl(300, 69%, 71%);
+  color: hsl(300, 69%, 71%);
+  cursor: pointer;
+}
+
+.logo {
+  width: 15%;
+  height: 10vh;
+  margin: 0 0 0 3.5rem;
+}
+
+/* Mobile view */
+@media screen and (max-width: 500px) {
+  .huddle__main {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 70vh;
+    width: 100vw;
+    border: 3px solid yellow;
+  }
+  .huddle__main__picture {
+    width: 80%;
+    height: 32vh;
+    background-size: contain;
+  }
+  .huddle__main__info {
+    width: 80vw;
+    height: 38vh;
     display: flex;
     flex-direction: column;
-    padding: 2rem 0;
   }
-  .statistics {
-    flex-direction: column;
-    height: 100%;
-    width: 20rem;
-    gap: 5vh;
-  }
-  .statistics__image {
-    border-radius: 0.9rem 0.9rem 0 0;
-  }
-  .statistics__information {
+  .huddle__main__info p {
     text-align: center;
-    gap: 5vh;
-  }
-  .statistics__information__head h1 {
-    padding: 0 1.3rem;
-    font-size: 1.8rem;
-  }
-  .statistics__information__discovery {
-    margin: 0;
-  }
-  .statistics__information__discovery p {
-    padding: 0 3rem;
     font-size: 1.1rem;
   }
-  .statistics__information__footer {
-    flex-direction: column;
-    gap: 5vh;
-    text-align: center;
+  .huddle__main__info .register {
+    width: 60vw;
+    margin: auto auto;
+    height: 6vh;
   }
-  .statistics__information__footer h2 {
-    font-size: 1.5rem;
+  .huddle__main__info .build__community {
+    padding: 0 0 0.1rem 0;
+    font-size: 1.8rem;
+    line-height: 2.3rem;
+    text-align: center;
     margin: 0;
   }
-  .statistics__information__footer p {
-    font-size: 0.7rem;
-    padding: 0.2rem 0 0 0;
+  .huddle__footer {
+    border: 4px solid yellow;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+  }
+  .huddle__footer .fa-brands {
+    height: 2rem;
+    width: 2rem;
+  }
+  .logo {
+    width: 35%;
+    border: 3px solid yellow;
+    height: 5vh;
   }
 }/*# sourceMappingURL=style.css.map */
